--- a/src/main/webapp/WEB-INF/view/chart/dept_chart.jspf
+++ b/src/main/webapp/WEB-INF/view/chart/dept_chart.jspf
@@ -1,3 +1,5 @@
+<%@ taglib prefix = "c" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@ taglib prefix = "fn"   uri = "http://java.sun.com/jsp/jstl/functions" %>
 <%@ page pageEncoding="UTF-8" %>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
@@ -7,16 +9,14 @@
     function drawChart() {
 
         var data = google.visualization.arrayToDataTable([
-            ['Task', 'Hours per Day'],
-            ['Work', 11],
-            ['Eat', 2],
-            ['Commute', 2],
-            ['Watch TV', 2],
-            ['Sleep', 7]
+            ['Name', 'count'],
+            <c:forEach var="dept" items="${ dept_list }">
+            ['${ dept.name }', ${ fn:length(dept.employees) }],
+            </c:forEach>
         ]);
 
         var options = {
-            title: 'My Daily Activities'
+            title: 'Number of departments'
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart'));
