--- a/src/main/webapp/WEB-INF/view/chart/salary_chart.jspf
+++ b/src/main/webapp/WEB-INF/view/chart/salary_chart.jspf
@@ -16,10 +16,11 @@
         ]);
 
         var options = {
-            title: 'Salary'
+            title: 'Salary',
+            legend: {position: 'bottom'}
         };
 
-        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+        var chart = new google.visualization.LineChart(document.getElementById('piechart'));
 
         chart.draw(data, options);
     }
