--- a/src/main/webapp/WEB-INF/view/include/menu.jspf
+++ b/src/main/webapp/WEB-INF/view/include/menu.jspf
@@ -6,7 +6,8 @@
 <div id="menu">
     <div class="pure-menu">
         <a class="pure-menu-heading" href="#">
-            OOO 您好
+            <a href="mailto:${ sessionScope.email }">${ sessionScope.username } </a> 您好 !<br />
+            <img src="${ sessionScope.picture_url }" />
         </a>
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
